force-app/main/default/objects/SPEN_MPAN__c/SPEN_MPAN__c.object-meta.xml
<CustomObject>
    <description>MPAN object is used to see MPAN related data.</description>
    <label>MPAN/Meter</label>
    <nameField>
        <displayFormat>M-{00000}</displayFormat>
        <label>MPAN Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPAN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>