force-app/main/default/objects/SPEN_MPAN__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Macjules: TO BE DELETED</description>
    <label>[TO BE DELETED] ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>