force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_AccountNumberMPAN__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AccountNumberMPAN__c</fullName>
    <description>The account number associated with a call - PO map this to the MPAN. Question - what if there are multiple MPANS associated? Can this be cross checked</description>
    <externalId>true</externalId>
    <label>MPAN</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>