force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_ConnectionStatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ConnectionStatus__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Connection Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Unmetered Supply</fullName>
            </value>
            <value>
                <fullName>Energised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>