force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_InServiceArea__c.field-meta.xml
<CustomField>
    <fullName>SPEN_InServiceArea__c</fullName>
    <formula>IF((LEFT( SPEN_AccountNumberMPAN__c , 2) == &apos;13&apos; || LEFT( SPEN_AccountNumberMPAN__c , 2) == &apos;18&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Service Area</label>
    <type>Checkbox</type>
</CustomField>