force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_LastEchoesSyncDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastEchoesSyncDate__c</fullName>
    <label>Last Ecoes Sync Date</label>
    <type>DateTime</type>
</CustomField>