force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_LastGasp__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastGasp__c</fullName>
    <description>field to get the last gasp details from sdif</description>
    <label>Last Gasp Date/Time</label>
    <type>DateTime</type>
</CustomField>