force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_LastPingDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastPingDateTime__c</fullName>
    <description>Hold the details whenever we send the Ping request.</description>
    <label>Last Ping Date/Time</label>
    <type>DateTime</type>
</CustomField>