force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_LastSyncValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_LastSyncValue__c</fullName>
    <formula>if(ISBLANK(SPEN_LastEchoesSyncDate__c), True, If(((NOW() - SPEN_LastEchoesSyncDate__c)*24)&gt;=24,True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Sync Value</label>
    <type>Checkbox</type>
</CustomField>