force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_MeterType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MeterType__c</fullName>
    <label>Meter Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>