force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_PingResult__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PingResult__c</fullName>
    <label>Ping Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Energized</fullName>
            </value>
            <value>
                <fullName>Deenergized</fullName>
            </value>
            <value>
                <fullName>Timed-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>