force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_PingResultFormula__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PingResultFormula__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT( SPEN_PingResult__c ))), TEXT(SPEN_PingResult__c ),
IF( AND(NOT(ISBLANK(SPEN_SmartMeterPingDateTime__c)),(NOW() - SPEN_SmartMeterPingDateTime__c) *24*60 &gt;=1 ), &apos;Timed-Out&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ping Result</label>
    <type>Text</type>
</CustomField>