force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_PremiseMeterType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseMeterType__c</fullName>
    <description>Type of the Premise - Meter</description>
    <label>Premise - Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Smartmeter</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>Token Meter</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Key Meter</label>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>S1</fullName>
                <isActive>false</isActive>
                <label>S1</label>
            </value>
            <value>
                <fullName>S2A</fullName>
                <isActive>false</isActive>
                <label>S2A</label>
            </value>
            <value>
                <fullName>S2AD</fullName>
                <isActive>false</isActive>
                <label>S2AD</label>
            </value>
            <value>
                <fullName>S2ADE</fullName>
                <isActive>false</isActive>
                <label>S2ADE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>