force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_PremisePostcode__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremisePostcode__c</fullName>
    <description>It holds the post code of premise object</description>
    <formula>SPEN_Premise__r.SPEN_PostCode__c</formula>
    <label>Premise Postcode</label>
    <type>Text</type>
</CustomField>