force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_PremiseRetailer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseRetailer__c</fullName>
    <description>Retailier (supplier) for premise. Originates from ADQM</description>
    <label>Premise - Retailer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>