force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_SmartMeterPingDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SmartMeterPingDateTime__c</fullName>
    <description>Timestamp created to store value when Ping request sent</description>
    <label>Smart Meter Ping DateTime</label>
    <type>DateTime</type>
</CustomField>