force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_Status__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Status__c</fullName>
    <description>Status of the smart meter - energised, de-energised</description>
    <label>Smart Meter Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>