force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_SupplierMPID__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplierMPID__c</fullName>
    <label>Supplier MPID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>