force-app/main/default/objects/SPEN_MPAN__c/fields/SPEN_SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SupplierName__c</fullName>
    <label>Supplier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>