force-app/main/default/objects/SPEN_MPAN__c/recordTypes/SPEN_MPAN.recordType-meta.xml
<RecordType>
    <fullName>SPEN_MPAN</fullName>
    <active>true</active>
    <description>Create record type for SPEN MPAN</description>
    <label>SPEN MPAN</label>
</RecordType>