force-app/main/default/objects/SPEN_MPAN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_AccountNumberMPAN__c</columns>
    <columns>SPEN_MeterType__c</columns>
    <columns>SPEN_Premise__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SPEN_LastGasp__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SPEN_LastPingDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>